# AISpec-Driven-Hackathon_book

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  prereq_output.json  temp_feature_spec.md
.claude/agents/: docusaurus-docs-specialist.md  project-orchestrator.md  ui-component-architect.md
.specify/memory/: constitution.md
ai-native-book/: .npmignore  docusaurus.config.ts  package.json  pnpm-lock.yaml
ai-native-book/docs/: introduction.md
ai-native-book/src/: middleware.ts
backend-python/: auth.py  config.py  database.py  main.py  rag.py  requirements.txt  schemas.py
scripts/: sim_to_real_validation.py
specs/001-physical-ai-course-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-write-chapter-four/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-chapter-topic-structure/: data-model.md  quickstart.md  research.md  tasks.md
specs/005-write-chapter-one/: spec.md  tasks.md
src/physical_ai_robotics_pkg/: CMakeLists.txt  package.xml
src/physical_ai_robotics_pkg/config/: logging.yaml
src/physical_ai_robotics_pkg/launch/: cognition_planning.launch.py  control_manipulation.launch.py  nav2_bringup.launch.py  perception_pipeline.launch.py  robot_state_publisher.launch.py
src/physical_ai_robotics_pkg/msg/: RobotIntent.msg
src/physical_ai_robotics_pkg/src/: biped_gait_node.py  kinematics_solver.py  lidar_node.py  llm_intent_node.py  manipulation_control_node.py  perception_node.py  planning_node.py  realsense_node.py  robot_state_publisher_node.py  task_executive_node.py  vslam_node.py  whisper_node.py
src/physical_ai_robotics_pkg/urdf/: humanoid_robot.urdf
(+129 files in other folders)
